começando o corpo do site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/css/index.css">
+    <link rel="stylesheet" href="../public/css/navbar.css">
+    <link rel="stylesheet" href="../public/css/content.css">
     <title>Bem Vindo</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                </ul>
             </div>
             
-            <img id="logo_img" src="../public/images/Logo.png" alt="">
+            <div id="logo_img"><img  src="../public/images/Logo.png" alt=""></div>
 
             <div class="menu_2">
                 <ul>
@@ -34,12 +35,13 @@
 
         <section>
             <div class="main">
-            <a href=""><div class="option" id="option_1">1</div></a> 
-            <a href=""><div class="option" id="option_2">2</div></a> 
-            <a href=""><div class="option" id="option_3">3</div></a> 
-            <a href=""><div class="option" id="option_4">4</div></a> 
-            <a href=""><div class="option" id="option_5">5</div></a> 
-            <a href=""><div class="option" id="option_6">6</div></a> 
+
+            <a href="" class="option"><div id="option_1"></div></a> 
+            <a href="" class="option"><div id="option_2"></div></a> 
+            <a href="" class="option"><div id="option_3"></div></a> 
+            <a href="" class="option"><div id="option_4"></div></a> 
+            <a href="" class="option"><div id="option_5"></div></a> 
+            <a href="" class="option"><div id="option_6"></div></a> 
                 
             </div>
         </section>
