--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/css/navbar.css">
     <link rel="stylesheet" href="../public/css/content.css">
+    <link rel="stylesheet" href="../public/css/footer.css">
     <title>Bem Vindo</title>
 </head>
 <body>
@@ -36,18 +37,48 @@
         <section>
             <div class="main">
 
-            <a href="" class="option"><div id="option_1"></div></a> 
-            <a href="" class="option"><div id="option_2"></div></a> 
-            <a href="" class="option"><div id="option_3"></div></a> 
-            <a href="" class="option"><div id="option_4"></div></a> 
-            <a href="" class="option"><div id="option_5"></div></a> 
-            <a href="" class="option"><div id="option_6"></div></a> 
+            <a href="" class="option"><div class="long_opt" id="option_1">
+
+                <div>
+                    <h2>Projeto</h2>
+                    <p>
+                        Status: Em Andamento
+                    </p>
+                </div>
+                <div>
+                    <h1>Meu Portifólio</h1>
+                    <p>Então bora, a ideia aqui é 'simples'. Colocar o que já fiz/sei.</p>
+                    <p>Mas tem um baita tempo que quero fazer isso e não sai.</p>
+                    <p>Dessa vez não escapa!! Só vamo!</p>
+                </div>
+
+            </div></a> 
+            <a href="" class="option"><div class="small_opt" id="option_2"></div></a> 
+            <a href="" class="option"><div class="small_opt" id="option_3"></div></a> 
+            <a href="" class="option"><div class="long_opt" id="option_4">
+
+                <div>
+                    <h2>Estudo</h2>
+                    <p>
+                        Status: Em Andamento
+                    </p>
+                </div>
+                <div>
+                    <h1>Flutter</h1>
+                    <p>Bom... Aprender a fazer apps Mobile é simplemente necessário.</p>
+                    <p>Uma hora ou outra vem aquela ideia mobile genial (Krappa) e não saber</p>
+                    <p>nenhuma tecnologia para desenvolver é uma B%sta.</p>
+                    <p>Dai comecei a ver demais o Flutter por aí, e resolvi testar.</p>
+                </div>
+            </div></a> 
+            <a href="" class="option"><div class="long_opt" id="option_5"></div></a> 
+            <a href="" class="option"><div class="small_opt" id="option_6"></div></a> 
                 
             </div>
         </section>
 
         <footer class="footer">
-            footer
+            
         </footer>
     </div>
 
