Modificação na qualidade da imagem de fundo da pagina index, deixei ela mais leve. E estruturei as coisas por lá

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
            <div class="menu_1">
                <ul>
-                   <li class="i_menu"><a href="">Projetos</a></li>
+                   <li class="i_menu"><a href="/projetos.html">Projetos</a></li>
                    <li class="i_menu"><a href="">Códigos</a></li>
                    <li class="i_menu"><a href="">Estudos</a></li>
                </ul>
@@ -39,17 +39,17 @@
 
             <a href="" class="option"><div class="long_opt" id="option_1">
 
-                <div>
+                <div class="long_opt_cla">
                     <h2>Projeto</h2>
                     <p>
                         Status: Em Andamento
                     </p>
                 </div>
-                <div>
+                <div class="long_opt_desc">
                     <h1>Meu Portifólio</h1>
-                    <p>Então bora, a ideia aqui é 'simples'. Colocar o que já fiz/sei.</p>
-                    <p>Mas tem um baita tempo que quero fazer isso e não sai.</p>
-                    <p>Dessa vez não escapa!! Só vamo!</p>
+                    <p class="long_opt_desc_p">Então bora, a ideia aqui é 'simples'. Colocar o que já fiz/sei. <br>
+                    Mas tem um baita tempo que quero fazer isso e não sai. 
+                    Dessa vez não escapa!! Só vamo!</p>
                 </div>
 
             </div></a> 
@@ -57,18 +57,18 @@
             <a href="" class="option"><div class="small_opt" id="option_3"></div></a> 
             <a href="" class="option"><div class="long_opt" id="option_4">
 
-                <div>
+                <div class="long_opt_cla">
                     <h2>Estudo</h2>
                     <p>
                         Status: Em Andamento
                     </p>
                 </div>
-                <div>
+                <div class="long_opt_desc">
                     <h1>Flutter</h1>
-                    <p>Bom... Aprender a fazer apps Mobile é simplemente necessário.</p>
-                    <p>Uma hora ou outra vem aquela ideia mobile genial (Krappa) e não saber</p>
-                    <p>nenhuma tecnologia para desenvolver é uma B%sta.</p>
-                    <p>Dai comecei a ver demais o Flutter por aí, e resolvi testar.</p>
+                    <p>Bom... Aprender a fazer apps Mobile é simplemente necessário.
+                    Uma hora ou outra vem aquela ideia mobile genial (Krappa) e não saber
+                    nenhuma tecnologia para desenvolver é uma B%sta.
+                    Dai comecei a ver demais o Flutter por aí, e resolvi testar.</p>
                 </div>
             </div></a> 
             <a href="" class="option"><div class="long_opt" id="option_5"></div></a> 
