atualização assinatura atica

--- a/projetos.html
+++ b/projetos.html
@@ -16,7 +16,7 @@
 
             <div class="menu_1">
                 <ul>
-                    <li class="i_menu"><a href="/projetos.html">Projetos</a></li>
+                    <li class="i_menu"><a href="/assinatura.html">Projetos</a></li>
                     <li class="i_menu"><a href="">Códigos</a></li>
                     <li class="i_menu"><a href="">Estudos</a></li>
                 </ul>
