cor de fundo do input das moedas foi removido, adicionado frase

--- a/importacao.html
+++ b/importacao.html
@@ -33,6 +33,7 @@
                     <label for="dolar"></label>
                     <input type="text" name="dolar" onfocus="this.value = '' " id="moedaDolar" placeholder="$ 1,00">
                     <label for="real"></label>
+                    <p>Equivale a</p>
                     <input type="text" name="real" onfocus="this.value = '' " id="moedaReal" placeholder="R$ 5.61">
                     <label for="dolarTurismo">Dólar Turismo</label>
                     <input type="text" name="dolarTurismo" onfocus="this.value = '' " id="dolarTurismo" placeholder="R$ 5.81">
