atualização, tentativa de usar php aqui no git

--- a/importacao.html
+++ b/importacao.html
@@ -1,16 +1,38 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/importacao.css">
     <link href="https://fonts.googleapis.com/css2?family=Cantata+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./public/css/navbar.css">
     <script src="./public/scripts/importacao.js"></script>
     <title>Calculadora Importação</title>
 </head>
 <body>
 
-    <nav></nav>
+    <nav class="navbar">
+
+        <div class="menu_1">
+            <ul>
+                <li class="i_menu"><a href="/projetos.html">Projetos</a></li>
+                <li class="i_menu"><a href="">Códigos</a></li>
+                <li class="i_menu"><a href="">Estudos</a></li>
+            </ul>
+         </div>
+         
+         <div id="logo_img"><img  src="../public/images/Logo.png" alt=""></div>
+
+         <div class="menu_2">
+             <ul>
+                 <li class="i_menu"><a href="">About Me</a></li>
+                 <li class="i_menu"><a href="">Lazer</a></li>
+                 <li class="i_menu"><a href="">Ideias</a></li>
+             </ul>
+         </div>
+
+     </nav>
     <main>
         <div class="logo"><a href="https://mathmarks.github.io/"><img class="logoImg" src="./public/images/Logo.png" alt=""></a></div>
         <section class="mainContent">
