--- a/index.html
+++ b/index.html
@@ -11,29 +11,10 @@
 </head>
 <body>
 
+    <header id="navBar">
+        <?php $IPATH = $_SERVER["DOCUMENT_ROOT"]."/public/common/"; include($IPATH."navBar.html");?>
+    </header>
     <div class="container">
-        <nav class="navbar">
-
-           <div class="menu_1">
-               <ul>
-                   <li class="i_menu"><a href="/projetos.html">Projetos</a></li>
-                   <li class="i_menu"><a href="">Códigos</a></li>
-                   <li class="i_menu"><a href="">Estudos</a></li>
-               </ul>
-            </div>
-            
-            <div id="logo_img"><img  src="../public/images/Logo.png" alt=""></div>
-
-            <div class="menu_2">
-                <ul>
-                    <li class="i_menu"><a href="">About Me</a></li>
-                    <li class="i_menu"><a href="">Lazer</a></li>
-                    <li class="i_menu"><a href="">Ideias</a></li>
-                </ul>
-            </div>
-
-        </nav>
-
         <section>
             <div class="main">
 
@@ -47,7 +28,7 @@
                 </div>
                 <div class="long_opt_desc">
                     <h1>Meu Portifólio</h1>
-                    <p class="long_opt_desc_p">Então bora, a ideia aqui é 'simples'. Colocar o que já fiz/sei. <br>
+                    <p class="long_opt_desc_p">Então bora, a ideia aqui é 'simples'. Colocar o que já fiz/sei. 
                     Mas tem um baita tempo que quero fazer isso e não sai. 
                     Dessa vez não escapa!! Só vamo!</p>
                 </div>
