--- a/produtos.html
+++ b/produtos.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   
-    <div class="section">
-        <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div>
+        <nav class="navbar" role="navigation" aria-label="main navigation" data-target="navMenu">
             <div class="navbar-brand">
               <a class="navbar-item" href="#">
                 <img src="./public/images/Logo.png" alt="Matheus Marques - Desenvolvedor e Cientista de Dados" style="max-width:80px; max-height:80px;">
@@ -74,5 +74,7 @@
     </div>
 
     <script src="./public/scripts/getdata.js"></script>
+    <script src="./public/scripts/bulmaScripts.js"></script>
+
 </body>
 </html>
