--- a/produtos.html
+++ b/produtos.html
@@ -37,7 +37,7 @@
                   </a>
           
                   <div class="navbar-dropdown">
-                    <a href="./importacao.html" class="navbar-item">
+                    <a href="./importacao.liquid" class="navbar-item">
                       Calculadora Importação
                     </a>
                     <a href="./wppmsg.html" class="navbar-item">
