--- a/assinatura.html
+++ b/assinatura.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+    <div class="navCall"></div>
     <section>
         <main>
             <div class="divLogo" style="
@@ -34,6 +35,7 @@
             </div>
         </main>
     </section>
-    
+    <script src="./public/scripts/bulmaScripts.js"></script>
+    <script src="./public/scripts/navCall.js"></script>
 </body>
 </html>
