--- a/importacao.html
+++ b/importacao.html
@@ -6,16 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/importacao.css">
     <link href="https://fonts.googleapis.com/css2?family=Cantata+One&display=swap" rel="stylesheet">
-    {% include './views/headneeds.liquid' %}
     <script src="./public/scripts/importacao.js"></script>
-
 
     <title>Calculadora Importação</title>
   </head>
   <body>
 
-    {% include './views/navbar.liquid' %}
-
+    <div class="navCall"></div>
 
     <main>
       <div class="logo">
@@ -73,6 +70,7 @@
       </section>
     </main>
     <footer></footer>
-
+    <script src="./public/scripts/bulmaScripts.js"></script>
+    <script src="./public/scripts/navCall.js"></script>
   </body>
 </html>>>
