--- a/assinatura.html
+++ b/assinatura.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./public/css/assinaturaatica.css">
-    <title>Assinatura</title>
+    <title>Assinatura Ática</title>
 </head>
 <body>
 
@@ -35,7 +35,6 @@
             </div>
         </main>
     </section>
-    <script src="./public/scripts/bulmaScripts.js"></script>
     <script src="./public/scripts/navCall.js"></script>
 </body>
 </html>
