--- a/wppmsg.html
+++ b/wppmsg.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/wppmsg.css">
-    <link rel="stylesheet" href="./public/css/navbar.css">
     <script src="./public/scripts/wppmsg.js"></script>
-    <title>Document</title>
+
+    <title>Gerador de link WhatsApp</title>
 </head>
 <body>
 
@@ -40,7 +40,7 @@
 
          </section>
     </section>
-    <script src="./public/scripts/bulmaScripts.js"></script>
+
     <script src="./public/scripts/navCall.js"></script>
 </body>
 </html>
