--- a/projetos.html
+++ b/projetos.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/footer.css">
-    <link rel="stylesheet" href="./public/css/navbar.css">
     <link rel="stylesheet" href="./public/css/projetos.css">
-    <title>Projetos</title>
+    <title>Meus Projetos</title>
 </head>
 <body>
 
@@ -39,7 +38,6 @@
    
     
     <script src="./public/scripts/projetos.js"></script>
-    <script src="./public/scripts/bulmaScripts.js"></script>
     <script src="./public/scripts/navCall.js"></script>
 </body>
 </html>
