--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="is-fullwidth is-fullheight">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/css/content.css">
     <link rel="stylesheet" href="../public/css/footer.css">
+    <link rel="stylesheet" href="./public/css/sass/index.sass">
     <title>Bem Vindo</title>
 </head>
-<body>
+<body >
 
+    <div class="navCall"></div>
     <div class="container">
         <section>
             <div class="main">
@@ -60,6 +62,6 @@
     </div>
 
     
-    
+    <script src="./public/scripts/navCall.js"></script>
 </body>
 </html>
