--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span aria-hidden="true"></span>
               </a>
             </div>
-            <div id="navbarBasicExample" class="navbar-menu">
+            <div id="navbarBasicExample" class="navbar-menu" style="color: black;">
               <div class="navbar-start">
                 <a href="/index.html" class="navbar-item">
                   Início
@@ -67,7 +67,7 @@
             </div>
           </nav>
     </div>
-    
+
     <div class="container">
         <section>
             <div class="main" style="height:80rem;">
